objects/ssot__CaseTeamMemberProgram__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CaseId__c</fullName>
        <label>Case</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CaseTeamMemberId__c</fullName>
        <label>Case Team Member</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Case Team Member Program Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819627425_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseTeamMemberProgram_ProgramId_map__rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>CaseTeamMemberProgram_ProgramId_map__rel</relationshipLabel>
        <relationshipName>rel_1719819627425_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719819731907_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CaseTeamMemberProgram_CaseId_map_Cas_rel</label>
        <referenceTo>ssot__Case__dlm</referenceTo>
        <relationshipLabel>CaseTeamMemberProgram_CaseId_map_Cas_rel</relationshipLabel>
        <relationshipName>rel_1719819731907_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>